--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -1,9 +1,18 @@
+/* * {
+ /*  font-family: kalam, cursive; */
+
+
+
+
 .header-background {
     background-color: rgb(223, 193, 193);
     height: 180vh;
     background-size: cover;
     background-repeat: no-repeat;
     background-image: url(../images/wave-1817646_1920.png);
-    
+  
   }
   
+  .aboutme {
+    font-family: kalam, cursive;
+  }
