--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@
     }
     .section3 {
       background-color: rgb(27, 23, 23);
-      height: 75vh;
+      height: 100vh;
     }
     #twitterlogo {
       height: 2em;
@@ -106,5 +106,10 @@
     }
     .background {
       background-color: snow;
+    }
+
+    .brewerylocator {
+      height: 12em;
+      width: 20em;
     }
     
