--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -16,3 +16,9 @@
   .aboutme {
     font-family: kalam, cursive;
   }
+
+  .navfonts {
+    font-family: kalam, cursive;
+    font-size: x-large;
+
+  }
