--- a/css/style.css
+++ b/css/style.css
@@ -112,4 +112,15 @@
       height: 12em;
       width: 20em;
     }
+
+    .aboutme {
+      font-family: kalam, cursive;
+      font-size: large;
+    }
+    .navfonts {
+      font-family: kalam, cursive;
+      font-size: x-large;
+    
+  
+    }
     
