--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 
 .aboutme {
   font-family: kalam, cursive;
-  font-size: large;
+  font-size: xx-large;
 }
 .navfonts {
   font-family: kalam, cursive;
