--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,23 @@
 
 
+.pddtext {
+  font-family: 'Cinzel', serif;
+  font-size: 4em;
+}
+
+#planingimg {
+  height: 4em;
+  width: 4em;
+}
+.steptext {
+  font-family: kalam, cursive;
+  font-size: medium;
+}
+
 
 .brewerylocator {
   height: 12em;
-  width: 20em;
+  width: 16em;
 }
 
 .aboutme {
@@ -15,6 +29,7 @@
   font-size: x-large;
 
 }
+
 
 .glass {
     text-align: center;
@@ -40,7 +55,7 @@
       height: 18em;
     }
     .section2 {
-      background-color: rgb(224, 40, 40);
+      background-color: lightcoral;
       
     }
     .footer {
@@ -122,6 +137,7 @@
       background-repeat: no-repeat;
       background-image: url(../images/wave-1817646_1920.png);
     }
+
 
 
 
