--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,14 @@
 
-
+.typing1 {
+  text-align: center;
+  text-rendering: geometricPrecision;
+  font-size: 4em;
+}
+.typing {
+  text-align: center;
+  text-rendering: geometricPrecision;
+  font-size: 4em;
+}
 .pddtext {
   font-family: 'Cinzel', serif;
   font-size: 4em;
