--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,9 @@
 
+
+
 .projectimg {
-
-height: 10rem;
-
+  height: 10rem;
 }
-
-
 
 .typing1 {
   text-align: center;
@@ -19,7 +17,7 @@ height: 10rem;
 }
 
 .pddtext {
-  font-family: 'Cinzel', serif;
+  font-family: "Cinzel", serif;
   font-size: 4em;
 }
 
@@ -31,7 +29,6 @@ height: 10rem;
   font-family: kalam, cursive;
   font-size: medium;
 }
-
 
 .brewerylocator {
   height: 16em;
@@ -45,119 +42,107 @@ height: 10rem;
 .navfonts {
   font-family: kalam, cursive;
   font-size: x-large;
-
 }
 
-
 .glass {
-    text-align: center;
-    }
-    
-    #img3 {
-      height: 13em;
-    }
-    #projectimg {
-      height: 15em;
-    }
-    .nav-item {
-      font-weight: lighter;
-      font-size: 1.1em;
-    }
-    #hi {
-        height: 14em;
-    }
-    #stepsimg {
-      height: 45em;
-    }
-    #rightimg {
-      height: 18em;
-    }
-    .section2 {
-      background-color: lightcoral;
-      
-    }
-    .footer {
-      background-color: rgb(223, 193, 193);
-      height: 23em;
-      background-image: url(../images/wave-1817646_1920.png);
-    }
-    #futureprojectsimg {
-      height: 15em;
-      width: 30em;
-    }
-    .futureprojects {
-      font-size: 3em;
-      background-color: rgb(223, 193, 193);
-    
-    }
-    .section3 {
-      height: 150vh;
-      background-color: rgb(255, 255, 255);
-      
-    }
-    #twitterlogo {
-      height: 2em;
-    }
-    
-    .develop {
-      font-size: 5em;
-     
-    }
-    .design {
-      font-size: 5em;
-    }
-    .plan {
-      image-orientation: flip;
-      font-size: 5em;
-    }
-    
-    #instalogo {
-      height: 2em;
-    }
-    #navbar {
-      background-color: rgb(234, 226, 243);
-    }
-    .btn-danger {
-      text-align: center;
-      color: black;
-      border-color: rgb(95, 91, 91);
-    }
-    .text {
-      text-align: center;
-      text-rendering: geometricPrecision;
-      font-size: 4em;
-    }
-    .main-nav:hover {
-      text-decoration: none;
-    }
-    .main-nav > img {
-      transition: 0.25s all;
-    }
-    .main-nav > img:hover {
-      transform: scale(1.1);
-    }
-    .section1 {
-      background-color: rgb(223, 193, 193);
-    
-      height: 30em;
-    }
-    .banner {
-      background-image: url(../images/avatar-2191918_1920.png);
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-position: center;
-      min-height: 100vh;
-    
-    }
-    .header-background {
-      background-color: rgb(223, 193, 193);
-      height: 90vh;
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-image: url(../images/wave-1817646_1920.png); 
-    }
+  text-align: center;
+}
 
+#img3 {
+  height: 13em;
+}
+#projectimg {
+  height: 15em;
+}
+.nav-item {
+  font-weight: lighter;
+  font-size: 1.1em;
+}
+#hi {
+  height: 14em;
+}
+#stepsimg {
+  height: 45em;
+}
+#rightimg {
+  height: 18em;
+}
+.section2 {
+  background-color: lightcoral;
+}
+.footer {
+  background-color: rgb(223, 193, 193);
+  height: 19em;
+  background-image: url(../images/wave-1817646_1920.png);
+}
+#futureprojectsimg {
+  height: 15em;
+  width: 30em;
+}
+.futureprojects {
+  font-size: 3em;
+  background-color: rgb(223, 193, 193);
+}
+.section3 {
+  height: 150vh;
+  background-color: rgb(255, 255, 255);
+}
+#twitterlogo {
+  height: 2em;
+}
 
+.develop {
+  font-size: 5em;
+}
+.design {
+  font-size: 5em;
+}
+.plan {
+  image-orientation: flip;
+  font-size: 5em;
+}
 
+#instalogo {
+  height: 2em;
+}
+#navbar {
+  background-color: rgb(234, 226, 243);
+}
+.btn-danger {
+  text-align: center;
+  color: black;
+  border-color: rgb(95, 91, 91);
+}
+.text {
+  text-align: center;
+  text-rendering: geometricPrecision;
+  font-size: 4em;
+}
+.main-nav:hover {
+  text-decoration: none;
+}
+.main-nav > img {
+  transition: 0.25s all;
+}
+.main-nav > img:hover {
+  transform: scale(1.1);
+}
+.section1 {
+  background-color: rgb(223, 193, 193);
 
-      
+  height: 30em;
+}
+.banner {
+  background-image: url(../images/avatar-2191918_1920.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  min-height: 100vh;
+}
+.header-background {
+  background-color: rgb(223, 193, 193);
+  height: 90vh;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url(../images/wave-1817646_1920.png);
+}
